@@ -42,29 +42,32 @@ ASTERISK_FILE_VERSION(__FILE__, "$Revision$")
 /* Maximum length of any variable */
 #define MAXRESULT	1024
 
-static char *tdesc = "String manipulation";
+static char *tdesc = "Cut out information from a string";
 
 static char *app_cut = "Cut";
 
-static char *cut_synopsis = "Splits a variable's content using the specified delimiter";
+static char *cut_synopsis = "Splits a variable's contents using the specified delimiter";
 
 static char *cut_descrip =
-"Usage: Cut(newvar=varname,delimiter,fieldspec)\n"
+"  Cut(newvar=varname,delimiter,fieldspec): This applicaiton will split the\n"
+"contents of a variable based on the given delimeter and store the result in\n"
+"a new variable.\n"
+"Parameters:\n"
 "  newvar    - new variable created from result string\n"
 "  varname   - variable you want cut\n"
 "  delimiter - defaults to '-'\n"
 "  fieldspec - number of the field you want (1-based offset)\n"
-"            may also be specified as a range (with -)\n"
-"            or group of ranges and fields (with &)\n" 
-"  The process with complete on success or fail on hangup or error\n";
+"              may also be specified as a range (with -)\n"
+"              or group of ranges and fields (with &)\n"
+"This application has been deprecated in favor of the CUT function.\n";
 
 static char *app_sort = "Sort";
 static char *app_sort_synopsis = "Sorts a list of keywords and values";
 static char *app_sort_descrip =
-"   Sort(<newvar>=<key1>:<val1>[,<key2>:<val2>[[...],<keyN>:<valN>]])\n"
-"Sorts the list provided by using the value as a float to order the list of\n"
-"keywords in ascending order.  Sets the variable provided to the list of\n"
-"sorted keywords. \n";
+"  Sort(newvar=key1:val1[,key2:val2[[...],keyN:valN]]): This application will\n"
+"sort the list provided in ascending order. The result will be stored in the\n"
+"specified variable name.\n"
+"  This applicaiton has been deprecated in favor of the SORT function.\n";
 
 STANDARD_LOCAL_USER;
 
